# egypt-nlp

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
egypt_nlp/: SPELLING_ERRORS.md  __init__.py  data.py  examples.py  examples_enhanced.py  extractor.py  extractor_enhanced.py
